<resources>
    <string name="app_name">Firebase Auth</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name_hint">Name</string>
    <string name="nid_hint">NID</string>
    <string name="address_hint">Address</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="retype_password_hint">Re-type Password</string>
</resources>
